# kdsnr-hwp-toolkit

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
hft-decoder/: .gitignore  AUTHORS  README.md  pyproject.toml
hft-decoder/rust/: Cargo.toml
hft-decoder/rust/fonts/: ENBASKVL.HFT  ENBERNF.HFT  ENBLBK.HFT  ENBODB.HFT  ENBODBI.HFT  ENBODBK.HFT  ENBODBKI.HFT  ENBRODWY.HFT  ENBRUSH.HFT  ENCOBK.HFT  ENCOBKI.HFT  ENCORN.HFT  ENCOSCPT.HFT  ENCR10B.HFT  ENCR10BI.HFT  ENCSCH.HFT  ENCSCHB.HFT  ENCSCHBI.HFT  ENCSCHI.HFT  ENCUCMBR.HFT  ENDOMCA.HFT  ENFREEHD.HFT  ENFUTUBK.HFT  ENGARM.HFT  ENGARMB.HFT  ENGARMBI.HFT  ENGARMI.HFT  ENGDOS.HFT  ENGDOSB.HFT  ENGDOSBI.HFT  ENGDOSI.HFT  ENGGT.HFT  ENGGTI.HFT  ENGMJ.HFT  ENGMJI.HFT  ENGRP.HFT  ENGRPI.HFT  ENGS.HFT  ENGSI.HFT  ENGT.HFT  (+346 more)
hft-decoder/rust/src/: alias.rs  bitmap.rs  cache.rs  cipher.rs  embedded.rs  inner_table.rs  johab.rs  ksx1001.rs  lib.rs  parser.rs  renderer.rs  vector.rs
hft-decoder/scripts/: frida_ac080_capture.py  frida_ad2c0_caller.py  frida_capture_all.py  frida_capture_cipher.py  frida_gdi_dump.py  frida_ggo_hook.py  frida_layout_backtrace.py  frida_outline_api_probe.py  frida_outline_widenet.py  frida_painter_dump.py
hft-decoder/src/: __init__.py  hft_bitmap.py  hft_cipher.py  hft_inner_table.py  hft_johab.py  hft_parser.py  hft_renderer.py  hft_varint.py  hft_vector.py
kdsnr-hwp-engine/: Cargo.toml
kdsnr-hwp-engine/api/: Cargo.toml
kdsnr-hwp-engine/api/src/: fonts.rs  lib.rs  render.rs
kdsnr-hwp-engine/core/: Cargo.toml
kdsnr-hwp-engine/core/src/: diagnostic.rs  geom.rs  ids.rs  lib.rs  result.rs  unit.rs
kdsnr-hwp-engine/doc/: Cargo.toml
kdsnr-hwp-engine/doc/src/: lib.rs
kdsnr-hwp-engine/doc/tests/: normalize.rs
kdsnr-hwp-engine/equation/: Cargo.toml
kdsnr-hwp-engine/equation/src/: hyhwpeq_advance.rs  layout.rs  lib.rs  lowering.rs  metrics.rs  native.rs  parser.rs  spacing.rs  tests.rs  tokens.rs  types.rs
kdsnr-hwp-engine/equation/src/node/: atop.rs  decoration.rs  delimiter.rs  fraction.rs  frame.rs  limit.rs  mod.rs  operator.rs  pile.rs  radical.rs  row.rs  script.rs  text.rs
kdsnr-hwp-engine/font/: Cargo.toml  manifest.tsv
kdsnr-hwp-engine/font/src/: advance.rs  fontcheck.rs  fontmap.rs  fontmap_builtin.rs  hftinfo.rs  hftinfo_builtin.rs  lib.rs  resolver.rs  script.rs  ttf.rs
kdsnr-hwp-engine/font/tests/: resolve_advance.rs
kdsnr-hwp-engine/hft/: Cargo.toml
kdsnr-hwp-engine/hft/examples/: probe_advance_source.rs  probe_hangul_advance.rs  probe_hft_structure.rs  probe_width_chunk.rs
kdsnr-hwp-engine/hft/src/: alias.rs  bitmap.rs  cache.rs  cipher.rs  johab.rs  ksx1001.rs  lib.rs  parser.rs  vector.rs
kdsnr-hwp-engine/layout/: Cargo.toml
kdsnr-hwp-engine/layout/src/: lib.rs  paginate.rs
kdsnr-hwp-engine/layout/tests/: measure.rs  paginate.rs
kdsnr-hwp-engine/paint/: Cargo.toml
kdsnr-hwp-engine/paint/src/: lib.rs
kdsnr-hwp-engine/parser/: Cargo.toml
kdsnr-hwp-engine/parser/src/: lib.rs  preservation.rs  split.rs
kdsnr-hwp-engine/parser/src/model/: bin_data.rs  control.rs  document.rs  event.rs  footnote.rs  header_footer.rs  mod.rs  page.rs  paragraph.rs  shape.rs  style.rs  table.rs
kdsnr-hwp-engine/parser/src/parser/: bin_data.rs  body_text.rs  cfb_reader.rs  control.rs  crypto.rs  doc_info.rs  header.rs  mod.rs  record.rs  tags.rs
kdsnr-hwp-engine/parser/src/parser/body_text/: tests.rs
kdsnr-hwp-engine/parser/src/parser/control/: shape.rs  tests.rs
kdsnr-hwp-engine/parser/src/parser/hwpx/: content.rs  header.rs  mod.rs  reader.rs  section.rs  utils.rs
kdsnr-hwp-engine/parser/src/serializer/: body_text.rs  byte_writer.rs  cfb_writer.rs  control.rs  doc_info.rs  header.rs  hwp_aux.rs  mini_cfb.rs  mod.rs  record_writer.rs
kdsnr-hwp-engine/parser/src/serializer/control/: tests.rs
kdsnr-hwp-engine/parser/src/serializer/doc_info/: tests.rs
kdsnr-hwp-engine/parser/src/serializer/hwpx/: content.rs  context.rs  fixtures.rs  header.rs  mod.rs  picture.rs  section.rs  shape.rs  table.rs  utils.rs  writer.rs
kdsnr-hwp-engine/parser/src/serializer/hwpx/templates/: empty_content.hpf  (+3 more)
kdsnr-hwp-engine/parser/src/split/: mod.rs
kdsnr-hwp-engine/parser/src/split/compose/: apply_atom.rs  inject.rs  merge_styles.rs  mod.rs  postprocess.rs  rewrite.rs  slot_catalog.rs
kdsnr-hwp-engine/render/: Cargo.toml
kdsnr-hwp-engine/render/src/: lib.rs
kdsnr-hwp-engine/render/tests/: render_pages.rs
layout-decoder/rust/: Cargo.toml
layout-decoder/rust/examples/: probe_g_paragraph.rs
layout-decoder/rust/src/: array_compositor.rs  autonum.rs  bullet_render.rs  compose_break.rs  compose_layout.rs  composition.rs  compositor.rs  font_metric.rs  font_metric_coretext.rs  glyph.rs  layout.rs  layout_factory.rs  lib.rs  placement.rs  ppt_compose_break.rs  ppt_compose_bullet.rs  ppt_compose_layout.rs  ppt_compose_numbering.rs  ppt_compositor.rs  properties.rs  runtime.rs  simple_compositor.rs  text_property.rs  value_types.rs
layout-decoder/validation/: Cargo.toml
layout-decoder/validation/src/: dump_lineseg.rs
render-engine/rust/: Cargo.toml
render-engine/rust/examples/: dump_tree.rs  e2e_bench.rs  e2e_bench_all.rs  probe_doc_pages.rs  probe_g_drawdirect.rs  probe_g_drawdirect_multi.rs  probe_g_multi.rs  probe_g_real.rs  probe_hft_ascii.rs  raster_pages.rs  svg_surface_probe.rs  wire_probe.rs  wire_real_gt.rs
render-engine/rust/src/: blip_glyph.rs  body_property.rs  brush.rs  bw_mode.rs  calc_draw_variables.rs  char_item_view.rs  char_item_view_bounds.rs  char_item_view_draw.rs  char_item_view_draw_direct.rs  char_item_view_draw_underline.rs  char_item_view_effects.rs  char_item_view_get_cached_render_path.rs  char_item_view_pick.rs  char_item_view_source_rect.rs  char_item_view_undraw.rs  color.rs  color_effect.rs  color_scheme.rs  degree.rs  drawing_type.rs  effect_style.rs  effects_container.rs  equation.rs  flag.rs  font_scheme.rs  font_set.rs  format_scheme.rs  gradient_stop.rs  guid.rs  hit.rs  lib.rs  logical_position.rs  math_util.rs  matrix3.rs  object_defaults.rs  outer_shadow.rs  path.rs  path_util.rs  paths.rs  pen.rs  (+27 more)
(+152 files in other folders)
