[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "kdsnr-hwp-toolkit"
version = "0.1.2"
description = "KSAT HWP/HWPX import, conversion, splitting, and preview rendering"
requires-python = ">=3.10"
# tqdm drives the one-time glyph-cache loading bar; everything else is native.
dependencies = ["tqdm>=4.66"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Education",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "kdsnr_hwp_toolkit._native"
# sdist must carry every engine workspace crate the extension links (path deps).
include = [
    { path = "Cargo.lock", format = "sdist" },
    { path = "kdsnr-hwp-engine/Cargo.toml", format = "sdist" },
    { path = "kdsnr-hwp-engine/*/Cargo.toml", format = "sdist" },
    { path = "kdsnr-hwp-engine/*/src/**/*", format = "sdist" },
    { path = "kdsnr-hwp-engine/hft/fonts/**/*", format = "sdist" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
