[package]
name = "kdsnr-hwp-layout"
version = "0.1.0"
edition = "2021"
description = "Native HWP measurement, pagination, and page layout tree."
license-file = "../../LICENSE"

[lib]
name = "kdsnr_hwp_layout"
path = "src/lib.rs"

[dependencies]
kdsnr-hwp-core = { path = "../core" }
kdsnr-hwp-doc = { path = "../doc" }

[dev-dependencies]
kdsnr-hwp-parser = { path = "../parser" }
