[package]
name = "kdsnr-layout-validation"
version = "0.1.0"
edition = "2021"
description = "Phase C validation harness — compare kdsnr-layout output against Hancom .hwp LineSeg reference"

[[bin]]
name = "dump-lineseg"
path = "src/dump_lineseg.rs"

[dependencies]
rhwp = { path = "../../vendor/rhwp" }
kdsnr-layout = { path = "../rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
